Segfault when loading file - OpenSubdiv? #56290

Closed
opened 2018-08-10 02:32:00 +02:00 by Joe Button · 5 comments

System Information
Ubuntu 18.04, 64 bit, Intel 6700 CPU, Nvidia 1060 graphics.

Blender Version
Broken: 2.80-2e10c658f42
Working: 2.79

Short description of error
On loading this file, Blender consistently segfaults on my system. Sorry it's a bit big (~22MB), deleting stuff seemed to make the crash go away.

printer.blend (http://tubbs.trition.org.uk/printer.blend)

/tmp/printer.crash.txt is empty. GDB output:

found bundled python: /home/joe/building/blender-2.80-2e10c658f42-linux-glibc219-x86_64/2.80/python
Read blend: /home/joe/blender/issues/assets/printer/printer.blend

Thread 14 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffe1173700 (LWP 30265)]
0x0000000000010000 in ?? ()
(gdb) bt

  • 0 0x0000000000010000 in ()
  • 1 0x0000000002b5e5eb in OpenSubdiv::v3_1_1::Far::TopologyRefinerFactory::resizeComponentTopology(OpenSubdiv::v3_1_1::Far::TopologyRefiner&, TopologyRefinerData const&) ()
  • 2 0x0000000002b5e0b1 in opensubdiv_capi::createOSDTopologyRefinerFromConverter(OpenSubdiv_Converter*) ()
  • 3 0x0000000002b5d9e2 in openSubdiv_createTopologyRefinerFromConverter ()
  • 4 0x00000000016e463c in ccgSubSurf_prepareTopologyRefiner ()
  • 5 0x0000000001859d01 in ()
  • 6 0x000000000185cfdf in subsurf_make_derived_from_derived ()
  • 7 0x00000000014f2c02 in ()
  • 8 0x00000000017c01db in modifier_applyModifier ()
  • 9 0x00000000016e79c7 in ()
  • 10 0x00000000016eb257 in ()
  • 11 0x00000000016ec79b in makeDerivedMesh ()
  • 12 0x00000000017df5b6 in BKE_object_handle_data_update ()
  • 13 0x00000000017df80e in BKE_object_eval_uber_data ()
  • 14 0x0000000001a3cb1c in ()
  • 15 0x0000000001a20e9f in ()
  • 16 0x00007ffff79b56db in start_thread (arg=0x7fffe1173700) at pthread_create.c:463
  • 17 0x00007ffff64ec88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
**System Information** Ubuntu 18.04, 64 bit, Intel 6700 CPU, Nvidia 1060 graphics. **Blender Version** Broken: 2.80-2e10c658f42 Working: 2.79 **Short description of error** On loading this file, Blender consistently segfaults on my system. Sorry it's a bit big (~22MB), deleting stuff seemed to make the crash go away. [printer.blend](https://archive.blender.org/developer/F4179055/printer.blend) (http://tubbs.trition.org.uk/printer.blend) /tmp/printer.crash.txt is empty. GDB output: found bundled python: /home/joe/building/blender-2.80-2e10c658f42-linux-glibc219-x86_64/2.80/python Read blend: /home/joe/blender/issues/assets/printer/printer.blend Thread 14 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffe1173700 (LWP 30265)] 0x0000000000010000 in ?? () (gdb) bt - 0 0x0000000000010000 in () - 1 0x0000000002b5e5eb in OpenSubdiv::v3_1_1::Far::TopologyRefinerFactory<TopologyRefinerData>::resizeComponentTopology(OpenSubdiv::v3_1_1::Far::TopologyRefiner&, TopologyRefinerData const&) () - 2 0x0000000002b5e0b1 in opensubdiv_capi::createOSDTopologyRefinerFromConverter(OpenSubdiv_Converter*) () - 3 0x0000000002b5d9e2 in openSubdiv_createTopologyRefinerFromConverter () - 4 0x00000000016e463c in ccgSubSurf_prepareTopologyRefiner () - 5 0x0000000001859d01 in () - 6 0x000000000185cfdf in subsurf_make_derived_from_derived () - 7 0x00000000014f2c02 in () - 8 0x00000000017c01db in modifier_applyModifier () - 9 0x00000000016e79c7 in () - 10 0x00000000016eb257 in () - 11 0x00000000016ec79b in makeDerivedMesh () - 12 0x00000000017df5b6 in BKE_object_handle_data_update () - 13 0x00000000017df80e in BKE_object_eval_uber_data () - 14 0x0000000001a3cb1c in () - 15 0x0000000001a20e9f in () - 16 0x00007ffff79b56db in start_thread (arg=0x7fffe1173700) at pthread_create.c:463 - 17 0x00007ffff64ec88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Author

Added subscriber: @Joeboy

Added subscriber: @Joeboy

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2018-08-10 10:20:03 +02:00

Confirmed, @Sergey think that one is for you too.

Confirmed, @Sergey think that one is for you too.

This issue was referenced by e6827ad9a6

This issue was referenced by e6827ad9a6fe2810d50b44106bac7c4b2fa55127

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56290
No description provided.