Fix T56290: Segfault when loading file - OpenSubdiv

Filled missing callbacks to converter.